[metadata]
name = konnect
version = 0.0.1
author = Ian Bird
author_email = IanDBird@Gmail.com
description = A python based interface for Konnect+ (EV Chargers by Andersen)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IanDBird/konnect
project_urls =
    Bug Tracker = https://github.com/IanDBird/konnect/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    warrant

[options.packages.find]
where = src